# linkhop

./: README.md  index.yaml
.github/workflows/: backend.yml  frontend.yml  helm.yml
.superpowers/brainstorm/1565660-1776529737/content/: api.html  architecture.html  (+6 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/linkhop/: api_keys.py  cache.py  cli.py  config.py  db.py  deps.py  errors.py  logging.py  main.py  matching.py  middleware.py  pipeline.py  ratelimit.py  short_id.py  url_parser.py
backend/src/linkhop/adapters/: __init__.py  apple_music.py  base.py  deezer.py  spotify.py  tidal.py  youtube_music.py
backend/src/linkhop/models/: api.py  db.py  domain.py
backend/src/linkhop/routes/: convert.py  health.py  services.py  share.py
backend/tests/: conftest.py  test_api_keys.py  test_cache.py  test_cli.py  test_config.py  test_db.py  test_deps.py  test_errors.py  test_logging.py  test_matching.py  test_middleware.py  test_models.py  test_pipeline.py  test_ratelimit.py  test_short_id.py  test_smoke.py  test_url_parser.py
backend/tests/adapters/: test_apple_music.py  test_base.py  test_deezer.py  test_spotify.py  test_tidal.py  test_youtube_music.py
backend/tests/fixtures/: apple_music_album.json  apple_music_search_album.json  apple_music_search_artist.json  apple_music_search_song.json  apple_music_track.json  deezer_album.json  deezer_artist.json  deezer_search_album.json  deezer_search_artist.json  deezer_search_track.json  deezer_track.json  spotify_album.json  spotify_artist.json  spotify_search_album.json  spotify_search_artist.json  spotify_search_track.json  spotify_token.json  spotify_track.json  tidal_album.json  tidal_artist.json  tidal_search_artists.json  tidal_search_isrc.json  tidal_search_metadata.json  tidal_search_upc.json  tidal_token.json  tidal_track.json  youtube_music_album.json  youtube_music_artist.json  youtube_music_search_albums.json  youtube_music_search_artists.json  youtube_music_search_songs.json  youtube_music_song.json
backend/tests/integration/: test_real_adapters.py  test_real_spotify_deezer.py
backend/tests/routes/: test_convert.py  test_health.py  test_services.py  test_share.py
docs/superpowers/plans/: 2026-04-18-linkhop-backend-core.md  2026-04-19-linkhop-frontend.md  2026-04-19-linkhop-tidal-adapter.md  2026-04-21-helm-chart.md  2026-06-12-youtube-music-adapter.md  2026-06-13-image-tag-and-placeholder-fixes.md  2026-06-13-uv-migration.md  2026-06-13-vite7-upgrade.md  2026-07-22-apple-music-adapter.md
docs/superpowers/specs/: 2026-04-18-linkhop-design.md  2026-04-19-linkhop-frontend-design.md  2026-04-21-helm-chart-design.md  2026-06-12-youtube-music-adapter-design.md  2026-06-13-image-tag-and-placeholder-fixes-design.md  2026-06-13-uv-migration-design.md  2026-06-13-vite7-upgrade-design.md  2026-07-22-apple-music-adapter-design.md
frontend/: .dockerignore  .gitignore  .npmrc  Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: sanity.test.ts  sanity.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/test/: setup.ts
frontend/tests/e2e/: smoke.spec.ts
helm/linkhop/: Chart.yaml  values.yaml
helm/linkhop/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  migration-job.yaml  secret.yaml
(+34 files in other folders)
