[project]
name = "linkhop"
version = "0.1.0"
description = "Music-link converter across streaming services"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.13.*",
    "pydantic-settings==2.13.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.31.*",
    "alembic==1.14.*",
    "redis==5.2.*",
    "httpx==0.28.*",
    "argon2-cffi==23.1.*",
    "click==8.1.*",
    "python-rapidjson==1.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "pytest-cov==5.0.*",
    "respx==0.21.*",
    "fakeredis[async]==2.26.*",
    "aiosqlite==0.20.*",
    "ruff==0.9.*",
    "mypy==1.15.*",
]

[project.scripts]
linkhop-admin = "linkhop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkhop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
