[project]
name = "linkhop"
version = "0.1.0"
description = "Music-link converter across streaming services"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.*",
    "uvicorn[standard]==0.44.*",
    "pydantic==2.13.*",
    "pydantic-settings==2.13.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.31.*",
    "alembic==1.18.*",
    "redis==7.4.*",
    "httpx==0.28.*",
    "argon2-cffi==25.1.*",
    "click==8.3.*",
    "python-rapidjson==1.23",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.*",
    "pytest-asyncio==1.3.*",
    "pytest-cov==7.1.*",
    "respx==0.23.*",
    "fakeredis[async]==2.35.*",
    "aiosqlite==0.22.*",
    "ruff==0.15.*",
    "mypy==1.20.*",
]

[project.scripts]
linkhop-admin = "linkhop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkhop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
